--- a/vehicleService/src/main/resources/application.properties
+++ b/vehicleService/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.data.mongodb.password=root
 spring.data.mongodb.port=27017
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.database=vehicleDB
+client.url=localhost/8081
