--- a/ClientService/src/main/resources/application.properties
+++ b/ClientService/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=ClientService
 
 # MongoDB connection configuration
 spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+spring.data.mongodb.port=27016
 spring.data.mongodb.database=clientDb
 
 # Authentication settings
@@ -14,3 +14,9 @@ spring.data.mongodb.authentication-database=admin
 
 # Enable logging of MongoDB queries (optional, for debugging)
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+
+server.port=8081
+
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.enabled=true
+server.servlet.encoding.force=true
