--- a/ClientService/src/main/resources/application.properties
+++ b/ClientService/src/main/resources/application.properties
@@ -17,6 +17,4 @@ logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 
 server.port=8081
 
-server.servlet.encoding.charset=UTF-8
-server.servlet.encoding.enabled=true
-server.servlet.encoding.force=true
+springdoc.swagger-ui.path=/swaggerui-doc
