--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ vehicleService/target/
 vehicleService/data/
 ApiGateway/target/
 ApiGateway/HELP.md
-ApiGateway/data/
+ApiGateway/volume-data/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
