--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=notification-service
 server.port=8083
 spring.mail.host=localhost
-spring.mail.port=1026
+spring.mail.port=1025
 spring.mail.username=
 spring.mail.password=
 spring.mail.properties.mail.smtp.auth=false
@@ -9,8 +9,9 @@ spring.mail.properties.mail.smtp.starttls.enable=false
 
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=notificationService
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
-spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.properties.spring.json.trusted.packages=com.workshopPlanning.event
-spring.kafka.consumer.properties.spring.json.type.mapping=event:com.workshopPlanning.event.WorkshopPlacedEvent
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=io.confluent.kafka.serializers.KafkaAvroDeserializer
+spring.kafka.consumer.properties.schema.registry.url=http://127.0.0.1:8085
+spring.kafka.consumer.properties.specific.avro.reader=true
+
 
