--- a/WorkshopPlanningService/src/main/resources/application.properties
+++ b/WorkshopPlanningService/src/main/resources/application.properties
@@ -12,4 +12,5 @@ spring.kafka.template.default-topic=workshop-plannified
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=io.confluent.kafka.serializers.KafkaAvroSerializer
 spring.kafka.producer.properties.schema.registry.url=http://127.0.0.1:8085
+springdoc.swagger-ui.path=/swaggerui-doc
 
