--- a/vehicleService/src/main/resources/application.properties
+++ b/vehicleService/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.data.mongodb.port=27017
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.database=vehicleDB
 client.url=http://localhost:8081
+springdoc.swagger-ui.path=/swaggerui-doc
