--- a/ClientService/src/main/resources/application.yml
+++ b/ClientService/src/main/resources/application.yml
@@ -2,14 +2,17 @@ spring:
   application:
     name: ClientService
 
+  server:
+    port: ${SERVER_PORT:8081}  # Default to 8081 if SERVER_PORT is not set, assuming vehicleService uses 8080
+
   data:
-      mongodb:
-        host: ${DB_HOST}
-        port: ${DB_PORT}
-        database: ${DB_NAME}
-        username: ${DB_USERNAME}
-        password: ${DB_PASSWORD}
-        authentication-database: ${MONGO_AUTH_DATABASE}
+    mongodb:
+      host: ${DB_HOST:localhost}      # Default to 'localhost' if DB_HOST is not set
+      port: ${DB_PORT:27016}          # Default to '27018' if DB_PORT is not set (ensure it's different from vehicleService MongoDB)
+      database: ${DB_NAME:clientDb}   # Default to 'clientDB' if DB_NAME is not set
+      username: ${DB_USERNAME:root}  # Default to 'admin' if DB_USERNAME is not set
+      password: ${DB_PASSWORD:root}  # Default to 'admin' if DB_PASSWORD is not set
+      authentication-database: ${MONGO_AUTH_DATABASE:admin}  # Default to 'admin' if MONGO_AUTH_DATABASE is not set
 
 logging:
   level:
