--- a/deployments/front-end-deployment.yml
+++ b/deployments/front-end-deployment.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: frontend-service
-          image: zahira18/frontend-service
+          image:  zahira18/front-end
           ports:
             - containerPort: 80
 ---
@@ -30,4 +30,4 @@ spec:
       port: 80
       targetPort: 80
       nodePort: 30080
-  type: NodePort
+  type: LoadBalancer
