--- a/deployments/gateway-api.yml
+++ b/deployments/gateway-api.yml
@@ -32,8 +32,10 @@ metadata:
 spec:
   selector:
     app: api-gateway
+  type: LoadBalancer
   ports:
     - protocol: TCP
       port: 9090
       targetPort: 9090
-  type: NodePort
+      nodePort: 30005
+
