--- a/deployments/manifests/clientservice-deployment.yml
+++ b/deployments/manifests/clientservice-deployment.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: springboot-crud-deployment
+  namespace: garage-ns
 spec:
   selector:
     matchLabels:
@@ -11,6 +12,7 @@ spec:
     metadata:
       labels:
         app: springboot-mongo
+
     spec:
       containers:
         - name: springboot-clientservice
@@ -37,6 +39,7 @@ apiVersion: v1 # Kubernetes API version
 kind: Service # Kubernetes resource kind we are creating
 metadata: # Metadata of the resource kind we are creating
   name: springboot-crud-svc
+  namespace: garage-ns
 spec:
   selector:
     app: springboot-mongo
