--- a/deployments/manifests/gateway-api.yml
+++ b/deployments/manifests/gateway-api.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: api-gateway
+  namespace: garage-ns
 spec:
   replicas: 1
   selector:
@@ -29,6 +30,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: api-gateway-service
+  namespace: garage-ns
 spec:
   selector:
     app: api-gateway
