--- a/deployments/manifests/notification-deployment.yml
+++ b/deployments/manifests/notification-deployment.yml
@@ -4,6 +4,7 @@ metadata:
   name: notification-service
   labels:
     app: notification-service
+  namespace: garage-ns
 spec:
   replicas: 1
   selector:
@@ -41,6 +42,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: notification-service
+  namespace: garage-ns
 spec:
   selector:
     app: notification-service
