--- a/deployments/manifests/shema-registry-deployment.yml
+++ b/deployments/manifests/shema-registry-deployment.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: schema-registry
+  namespace: garage-ns
 spec:
   replicas: 1
   selector:
@@ -29,6 +30,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: schema-registry-service
+  namespace: garage-ns
 spec:
   selector:
     app: schema-registry
