--- a/deployments/manifests/vehicleservice-deployment.yml
+++ b/deployments/manifests/vehicleservice-deployment.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: springboot-vehicle-deployment
+  namespace: garage-ns
 spec:
   selector:
     matchLabels:
@@ -39,6 +40,7 @@ apiVersion: v1 # Kubernetes API version
 kind: Service # Kubernetes resource kind we are creating
 metadata: # Metadata of the resource kind we are creating
   name: springboot-vehicle-svc
+  namespace: garage-ns
 spec:
   selector:
     app: springboot-vehicle-mongo
