--- a/deployments/manifests/workshop-deployment.yml
+++ b/deployments/manifests/workshop-deployment.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: workshop-planning-service
+  namespace: garage-ns
 spec:
   replicas: 1
   selector:
@@ -41,6 +42,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: workshop-service
+  namespace: garage-ns
 spec:
   selector:
     app: workshop-planning-service
